--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <viewclasses.StrokeInput
+    <viewclasses.StrokeInputView
         android:id="@+id/strokeInputId"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,9 +23,9 @@
         android:layout_alignParentBottom="true"
         android:text="Удалить" />
 
-    <!--<viewclasses.DrawOutput
+    <viewclasses.DrawOutputView
         android:id="@+id/drawOutputId"
         android:layout_below="@id/strokeInputId"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" /> -->
+        android:layout_height="match_parent" />
 </RelativeLayout>
