--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <viewclasses.StrokeInputView
         android:id="@+id/strokeInputId"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:alpha="0"
         />
 
     <Button
@@ -23,9 +25,8 @@
         android:layout_alignParentBottom="true"
         android:text="Удалить" />
 
-    <viewclasses.DrawOutputView
+    <viewclasses.DrawStrokeView
         android:id="@+id/drawOutputId"
-        android:layout_below="@id/strokeInputId"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </RelativeLayout>
