Moved viewclasses to com.example.ochev

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:id="@+id/relativeId"
         android:layout_height="match_parent">
-        <viewclasses.DrawStrokeView
+        <com.example.ochev.viewclasses.DrawStrokeView
             android:id="@+id/drawOutputId"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
