Добавил кнопку очистки, пофиксил вывод треугольника.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,13 @@
             android:layout_height="match_parent" />
 
 
-
     </FrameLayout>
+    <Button
+        android:id="@+id/clearButtonId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:text="@string/clearButtonName" />
 
 </RelativeLayout>
