--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,6 @@
             android:id="@+id/drawStrokeId"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
-
     </FrameLayout>
     <Button
         android:id="@+id/clearButtonId"
@@ -28,5 +26,13 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:text="@string/clearButtonName" />
+
+    <Button
+        android:id="@+id/deleteButtonId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="@string/deleteButtonName" />
 
 </RelativeLayout>
