--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,10 @@
         android:id="@+id/deleteButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:alpha="0"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:text="@string/deleteButtonName" />
+        android:text="@string/deleteButtonName"
+        tools:ignore="RelativeOverlap" />
 
 </RelativeLayout>
