Добавлено рисование штриха.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     tools:context=".MainActivity">
 
     <FrameLayout
-        android:id="@+id/relativeId"
+        android:id="@+id/frameId"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
