Добавлены кнопки для истории графа.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,6 +19,10 @@
             android:id="@+id/drawStrokeId"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+
+
+
     </FrameLayout>
     <Button
         android:id="@+id/clearButtonId"
@@ -26,6 +31,24 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:text="@string/clearButtonName" />
+
+    <ImageButton
+        android:id="@+id/undoButtonId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+
+        app:srcCompat="@android:drawable/ic_media_previous" />
+
+
+    <ImageButton
+        android:id="@+id/forwardButtonId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+
+        app:srcCompat="@android:drawable/ic_media_next" />
+
 
     <Button
         android:id="@+id/deleteButtonId"
