--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,10 @@
             android:id="@+id/drawStrokeId"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+        <com.example.ochev.viewclasses.DrawLinesView
+            android:id="@+id/drawLinesId"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
 
     </FrameLayout>
