--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,6 +88,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
+    <Button
+        android:id="@+id/copyButtonId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:text="@string/copyButtonName"
+        tools:ignore="MissingConstraints,RelativeOverlap"
+        />
+
+
     <com.example.ochev.viewclasses.SmartEditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
