--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,11 @@
         android:id="@+id/deleteButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        
+        android:textSize="25sp"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:visibility="invisible"
+
         android:text="@string/deleteButtonName"
         tools:ignore="RelativeOverlap"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,10 +47,11 @@
         android:id="@+id/forwardButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        
+        style="@style/Widget.MaterialComponents.Button.TextButton"
 
-        android:layout_marginStart="5sp"
+        android:layout_marginStart="1.5sp"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:srcCompat="@android:drawable/ic_media_next"
         tools:ignore="ContentDescription" />
@@ -55,7 +60,9 @@
         android:id="@+id/undoButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5sp"
+        
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_marginEnd="1.5sp"
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="@id/guideline"
@@ -73,6 +80,9 @@
         android:id="@+id/clearButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        
+        android:textSize="25sp"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:text="@string/clearButtonName"
@@ -83,6 +93,10 @@
         android:id="@+id/saveButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        
+        android:textSize="25sp"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+
         android:text="@string/saveButtonName"
         tools:ignore="MissingConstraints,RelativeOverlap"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,6 +106,10 @@
         android:id="@+id/copyButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        
+        android:textSize="25sp"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+
         android:visibility="invisible"
         android:text="@string/copyButtonName"
         tools:ignore="MissingConstraints,RelativeOverlap"
