--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,28 +45,28 @@
 
     <ImageButton
         android:id="@+id/forwardButtonId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
         style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:rotation="180"
+        android:layout_height="wrap_content"
 
         android:layout_marginStart="1.5sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline"
-        app:srcCompat="@android:drawable/ic_media_next"
+        app:srcCompat="?attr/homeAsUpIndicator"
         tools:ignore="ContentDescription" />
 
     <ImageButton
         android:id="@+id/undoButtonId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
         style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
         android:layout_marginEnd="1.5sp"
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="@id/guideline"
-        app:srcCompat="@android:drawable/ic_media_previous"
+        app:srcCompat="?attr/actionModeCloseDrawable"
         tools:ignore="ContentDescription" />
 
     <androidx.constraintlayout.widget.Guideline
