--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,12 @@
             android:id="@+id/drawGraphId"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
         <com.example.ochev.viewclasses.DrawStrokeView
             android:id="@+id/drawStrokeId"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
         <com.example.ochev.viewclasses.DrawLinesView
             android:id="@+id/drawLinesId"
             android:layout_width="match_parent"
@@ -30,27 +32,26 @@
 
     <Button
         android:id="@+id/deleteButtonId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
-        android:textSize="25sp"
         style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:visibility="invisible"
+        android:layout_width="wrap_content"
 
+        android:layout_height="wrap_content"
         android:text="@string/deleteButtonName"
-        tools:ignore="RelativeOverlap"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="25sp"
+
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="RelativeOverlap" />
 
     <ImageButton
         android:id="@+id/forwardButtonId"
         android:layout_width="50sp"
-        android:rotation="180"
         android:layout_height="45sp"
+        android:layout_marginStart="10sp"
         android:background="@null"
 
-        android:layout_marginStart="10sp"
+        android:rotation="180"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:srcCompat="?attr/homeAsUpIndicator"
@@ -59,9 +60,9 @@
     <ImageButton
         android:id="@+id/undoButtonId"
         android:layout_width="50sp"
-        android:background="@null"
         android:layout_height="45sp"
         android:layout_marginEnd="10sp"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="@id/guideline"
@@ -69,50 +70,48 @@
         tools:ignore="ContentDescription" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5"/>
+        app:layout_constraintGuide_percent="0.5" />
 
     <Button
         android:id="@+id/clearButtonId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
-        android:textSize="25sp"
         style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:text="@string/clearButtonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/saveButtonId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
-        android:textSize="25sp"
         style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
 
+        android:layout_height="wrap_content"
         android:text="@string/saveButtonName"
-        tools:ignore="MissingConstraints,RelativeOverlap"
+
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        tools:ignore="MissingConstraints,RelativeOverlap" />
 
     <Button
         android:id="@+id/copyButtonId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
-        android:textSize="25sp"
         style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
 
-        android:visibility="invisible"
+        android:layout_height="wrap_content"
         android:text="@string/copyButtonName"
-        tools:ignore="MissingConstraints,RelativeOverlap"
-        />
+
+        android:textSize="25sp"
+        android:visibility="invisible"
+        tools:ignore="MissingConstraints,RelativeOverlap" />
 
 
     <com.example.ochev.viewclasses.SmartEditText
