--- a/app/src/main/res/layout/graph_fragment_view.xml
+++ b/app/src/main/res/layout/graph_fragment_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/graph_fragment_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,4 +15,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</FrameLayout>
+    <com.example.ochev.ui.FigureDrawingView
+        android:id="@+id/figure_drawing_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:id="@+id/side_environment_settings_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="12dp"
+        android:background="@drawable/side_environment_settings_background"
+        android:elevation="48dp" />
+
+    <FrameLayout
+        android:id="@+id/enter_side_environment_settings"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:background="@color/black" />
+
+
+</RelativeLayout>
