--- a/app/src/main/res/layout/graph_fragment_view.xml
+++ b/app/src/main/res/layout/graph_fragment_view.xml
@@ -21,6 +21,7 @@
         android:layout_height="match_parent" />
 
     <LinearLayout
+        android:orientation="vertical"
         android:id="@+id/side_environment_settings_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
