--- a/app/src/main/res/layout/main_acitvity_view.xml
+++ b/app/src/main/res/layout/main_acitvity_view.xml
@@ -9,4 +9,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <FrameLayout
+        android:id="@+id/popup_window"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:clickable="false"
+        android:focusable="false"
+        android:background="@drawable/dark_background">
+
+        <FrameLayout
+            android:id="@+id/popup_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
 </RelativeLayout>
