--- a/app/src/main/res/layout/environment_setting_button.xml
+++ b/app/src/main/res/layout/environment_setting_button.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="160dp"
-    android:layout_height="wrap_content">
+    android:layout_width="140dp"
+    android:layout_height="40dp">
 
     <TextView
         android:id="@+id/environment_settings_button_text"
         android:layout_width="140dp"
-        android:layout_height="32dp"
+        android:layout_height="40dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:textSize="16dp"
+        android:textSize="20dp"
+        android:fontFamily="@font/roboto_normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
