--- a/app/src/main/res/layout/graph_fragment_view.xml
+++ b/app/src/main/res/layout/graph_fragment_view.xml
@@ -21,23 +21,30 @@
         android:layout_height="match_parent" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:id="@+id/side_environment_settings_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="12dp"
+        android:layout_margin="16dp"
+        android:padding="8dp"
         android:background="@drawable/side_environment_settings_background"
-        android:elevation="48dp" />
+        android:elevation="48dp"
+        android:orientation="vertical" />
 
-    <FrameLayout
+    <ImageView
         android:id="@+id/enter_side_environment_settings"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:background="@color/black" />
+        android:padding="8dp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/editing_buttons_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
 
 </RelativeLayout>
