--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,6 @@
 <resources>
     <item name="copy_button_id" type="id" />
     <item name="delete_button_id" type="id" />
+    <item name="back_button_id" type="id" />
+    <item name="forward_button_id" type="id" />
 </resources>
