--- a/app/src/main/res/layout/graph_chooser_item.xml
+++ b/app/src/main/res/layout/graph_chooser_item.xml
@@ -3,16 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/graph_chooser_item_container"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="300dp">
 
-    <TextView
-        android:id="@+id/graph_chooser_item_number"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+    <ImageView
+        android:id="@+id/graph_chooser_item_pic"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:fontFamily="@font/roboto_normal"
-        android:gravity="center"
-        android:textSize="30dp"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
